Codecleanup, remove deprecated calls preparation for #39